--- a/Prerequisites/code/Part1_PurePython.ipynb
+++ b/Prerequisites/code/Part1_PurePython.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "bbcccdd0-f034-493a-8917-38214b4c92dd",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "afbaabc6-30a2-4032-9f23-28071723e56e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "id": "17830b20-6b6f-4a5e-8044-a31795da361e",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "id": "6771eb2f-0cae-4a06-bdb5-f4361fc8ebff",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "id": "693916bd-0083-4592-934c-ad485987990f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "id": "3cac22c7-b4e7-4669-8cdf-578d78d15078",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "id": "3225dba8-6444-477e-a9b6-914423783df9",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "id": "c8caabe8-5454-424e-a98e-56346c8846d2",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 19,
    "id": "affef667-984c-48a7-92b4-fb227cb3f011",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 21,
    "id": "6eb94304-8d96-4123-805e-3791f89ce680",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 23,
    "id": "033f11de-f23c-44c9-bebe-80a290367eb2",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
      "text": [
       "Final weights: [194196.36711970338, -15374.727318099198, -20170.32028744112, 10805.874030985211, 8825.378313894817, 3888.352349175252, -13251.558787594204, 6080.40157909314, 89941.05466600359, 13728.497494807843, 125.95755395930706, 25503.60571366989, 26550.01148858846, 64209.92765607941]\n",
       "\n",
-      "Convergence Time: 50.55324745178223 seconds\n"
+      "Convergence Time: 51.97083926200867 seconds\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "id": "433d1142-453c-48ba-bc24-272d943e5a32",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 27,
    "id": "47a16211-ba1f-421f-b94b-3b7dbe426445",
    "metadata": {},
    "outputs": [
@@ -272,17 +272,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train MAE: 3314586077.4149776\n",
-      "Train RMSE: 57572.44199627959\n",
+      "Train MAE: 29030.96018315766\n",
+      "Train RMSE: 46827.182644055145\n",
       "Train R² Score: 0.8359649330725991\n",
-      "Test MAE: 3314586077.4149776\n",
-      "Test RMSE: 57572.44199627959\n",
+      "Test MAE: 29132.204990169415\n",
+      "Test RMSE: 49530.28203648108\n",
       "Test R² Score: 0.8127875434807676\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "def predict_multiple(X, theta):\n",
     "    return [predict(x, theta) for x in X]\n",
     "\n",
@@ -290,24 +289,24 @@
     "y_train_pred = predict_multiple(X_train, theta)\n",
     "y_test_pred = predict_multiple(X_test, theta)\n",
     "\n",
-    "\n",
     "def calculate_metrics(y_true, y_pred):\n",
     "    n = len(y_true)\n",
     "    mae = sum(abs(yt - yp) for yt, yp in zip(y_true, y_pred)) / n\n",
+    "    mse = sum((yt - yp) ** 2 for yt, yp in zip(y_true, y_pred)) / n\n",
     "    rmse = mse ** 0.5\n",
     "    y_mean = sum(y_true) / n\n",
     "    ss_tot = sum((yt - y_mean) ** 2 for yt in y_true)\n",
     "    ss_res = sum((yt - yp) ** 2 for yt, yp in zip(y_true, y_pred))\n",
     "    r2 = 1 - (ss_res / ss_tot)\n",
-    "    return mse, rmse, r2\n",
+    "    return mae, rmse, r2\n",
     "\n",
-    "\n",
+    "# Training set metrics\n",
     "mae_train, rmse_train, r2_train = calculate_metrics(y_train, y_train_pred)\n",
     "print(f\"Train MAE: {mae_train}\")\n",
     "print(f\"Train RMSE: {rmse_train}\")\n",
     "print(f\"Train R² Score: {r2_train}\")\n",
     "\n",
-    "\n",
+    "# Test set metrics\n",
     "mae_test, rmse_test, r2_test = calculate_metrics(y_test, y_test_pred)\n",
     "print(f\"Test MAE: {mae_test}\")\n",
     "print(f\"Test RMSE: {rmse_test}\")\n",
